--- a/heliconia/css/sidebar.css
+++ b/heliconia/css/sidebar.css
@@ -10,13 +10,13 @@
     }
 
 
-    nav.stick {
+/*    nav.stick {
         position: fixed;
         top: 0;
 
         margin-top:12px;
     }
-
+*/
 
     nav ul {
         list-style-type:none;
