--- a/heliconia/css/sidebar.css
+++ b/heliconia/css/sidebar.css
@@ -19,19 +19,17 @@
         list-style-type:none;
     }
 
-    nav li a{
+    nav li{
+      margin: 10px 0;
 
     }
     nav li a div {
       height: 10px;
       width: 10px;
-      background: #e73644;
-      /*border-radius: 50%;*/
       border: 1px solid #bf2134;
     }
 
     .nav-active div{
-        background: #269d78;
-        border: 1px solid #35a956;
+        background: #e73644;
     }
 
